# hft-bot

./: .gitignore  CLAUDE.md  Cargo.toml  TODO.md
analysis_data/: README.md  analyze.py  fetch.py  render_rust_report.py  run_analysis.py  settlement.py
analysis_data/output/0xe00740bc/markets_html/: index.html  m000.html  m001.html  m002.html  m003.html  m004.html  m005.html  m006.html  m007.html  m008.html  m009.html  m010.html  m011.html  m012.html  m013.html  m014.html  m015.html  m016.html  m017.html  m018.html  m019.html  m020.html  m021.html  m022.html  m023.html  m024.html  m025.html  m026.html  m027.html  m028.html  m029.html  m030.html  m031.html  m032.html  m033.html  m034.html  m035.html  m036.html  m037.html  m038.html  (+363 more)
analysis_data/output/rust_strategy/markets_html/: index.html  m000.html  m001.html  m002.html  m003.html  m004.html  (+928 more)
config/: main_config.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/backtest/: Cargo.toml
crates/backtest/examples/: batch.rs  batch_report.rs  diag_match.rs  diagnose.rs  edge_replay.rs  report_json.rs  single_match.rs  sweep.rs
crates/backtest/src/: batch.rs  driver.rs  lib.rs  market.rs  real_data.rs  run.rs
crates/domain/: Cargo.toml
crates/domain/src/: clock.rs  command.rs  fee.rs  lib.rs  market.rs  order.rs  phase.rs  pnl.rs  round_state.rs  state.rs  types.rs
crates/engine/: Cargo.toml
crates/engine/src/: apply.rs  book.rs  budget.rs  config.rs  core.rs  decide.rs  event.rs  lib.rs
crates/exchange/: Cargo.toml
crates/exchange/src/: backend.rs  event.rs  lib.rs  simulator.rs
crates/fsm/: Cargo.toml
crates/fsm/src/: lib.rs
crates/inventory/: Cargo.toml
crates/inventory/src/: lib.rs  lot.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: ledger.rs  lib.rs  wal.rs
crates/risk/: Cargo.toml
crates/risk/src/: auditor.rs  lib.rs  pool.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: building.rs  circuit_breaker.rs  config.rs  context.rs  cycling.rs  dynamic_hedge.rs  ev_hedge.rs  harvesting.rs  lib.rs  pairing.rs  router.rs
docs/: 0xe00740bc 策略分析.md  开发计划.md  待查证事实.md  架构.md  架构设计.md  策略.md  阶段8调参诊断结论.md
