[workspace]
resolver = "3"
members = [
    "crates/domain",
    "crates/inventory",
    "crates/exchange",
]

[workspace.dependencies]
rust_decimal = { version = "1.42.1", features = ["serde"] }
rust_decimal_macros = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
