[package]
name = "backtest"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
exchange = { path = "../exchange" }
engine = { path = "../engine" }
inventory = { path = "../inventory" }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
