[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
inventory = { path = "../inventory" }
strategy = { path = "../strategy" }
exchange = { path = "../exchange" }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
tokio = { workspace = true }
